plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group
base { archivesName = project.archives_base_name }

loom {
    splitEnvironmentSourceSets()
    mods {
        projecte {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

sourceSets {
    porting {
        java.srcDir 'src/porting/java'
        resources.srcDir 'src/porting/resources'
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += output + compileClasspath
    }
    test {
        compileClasspath += sourceSets.porting.output
        runtimeClasspath += sourceSets.porting.output
    }
}

configurations {
    portingImplementation.extendsFrom implementation
    testImplementation.extendsFrom portingImplementation
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
    implementation(include("org.apache.commons:commons-math3:${commons_math_version}"))
    testImplementation "org.junit.jupiter:junit-jupiter:${junit_version}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_version}"
}

def modVersion = project.version

processResources {
    inputs.property 'version', modVersion
    filesMatching('fabric.mod.json') { expand version: modVersion }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-Xlint:deprecation')
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from('LICENSE') { rename { "${it}_${base.archivesName.get()}" } }
}

tasks.register('exportProjectEBaseline', JavaExec) {
    dependsOn portingClasses
    classpath = sourceSets.porting.runtimeClasspath
    mainClass = 'moze_intel.projecte.porting.BaselineExporter'
    doFirst {
        setArgs([
            providers.gradleProperty('projecte_upstream').get(),
            layout.projectDirectory.file('docs/porting/baseline/projecte-1.21.1.json').asFile.absolutePath,
            providers.gradleProperty('projecte_upstream_commit').get()
        ])
    }
}

def verificationBaseline = layout.buildDirectory.file('porting/projecte-1.21.1.json')

tasks.register('generateVerificationBaseline', JavaExec) {
    dependsOn portingClasses
    classpath = sourceSets.porting.runtimeClasspath
    mainClass = 'moze_intel.projecte.porting.BaselineExporter'
    outputs.file verificationBaseline
    doFirst {
        setArgs([
            providers.gradleProperty('projecte_upstream').get(),
            verificationBaseline.get().asFile.absolutePath,
            providers.gradleProperty('projecte_upstream_commit').get()
        ])
    }
}

tasks.register('verifyBaseline') {
    dependsOn generateVerificationBaseline
    inputs.file layout.projectDirectory.file('docs/porting/baseline/projecte-1.21.1.json')
    inputs.file verificationBaseline
    doLast {
        def expected = layout.projectDirectory.file('docs/porting/baseline/projecte-1.21.1.json').asFile.toPath()
        def actual = verificationBaseline.get().asFile.toPath()
        long mismatch = java.nio.file.Files.mismatch(expected, actual)
        if (mismatch != -1) {
            throw new GradleException("ProjectE baseline differs at byte ${mismatch}: expected ${expected}, actual ${actual}")
        }
    }
}

def runtimeJarTask = tasks.named('jar')

tasks.register('packageAudit', Test) {
    dependsOn runtimeJarTask
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
    filter { includeTestsMatching 'moze_intel.projecte.packaging.PackagedJarTest' }
    doFirst {
        systemProperty 'projecte.runtimeJar', runtimeJarTask.get().archiveFile.get().asFile.absolutePath
    }
}
